create.html css changes. removed bullets and added hover bg color change

--- a/static/blueprint/screen.css
+++ b/static/blueprint/screen.css
@@ -22,6 +22,10 @@ blockquote:before, blockquote:after, q:before, q:after {content:"";}
 blockquote, q {quotes:"" "";}
 a img {border:none;}
 
+ul, li {
+    list-style-type: none;
+}
+
 /* forms.css */
 label {
 	font-size: 16px;
