--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -47,7 +47,7 @@
 	<div id="header_msg" class="quiet"><font size = 4.5em>There are {{event.num_attendees}} attending this event.</font></div>
 	<BR>
 	  
-	<input id="login_button" type="submit" class="button" value="Login: See if your friends are going." onClick="location.href='/login/'"> &nbsp; &nbsp;
+	<input id="login_button" type="submit" class="button" value="Login: See if your friends are going." onClick="location.href='/simpz/login/'"> &nbsp; &nbsp;
       </div>
 {% endif%}
 
@@ -81,9 +81,9 @@ You have been Invited by {{refer_user.name}} &nbsp;&nbsp;<img src="{{refer_user.
         <div class="twitterfriends">
           <div id="tweet_title"><input type="text" id="tweet_text" maxlength="140" size="45"></input><button id="tweet_invite_button">Tweet Invite</button></div>
           <div id="tweet_msg"></div>
-	  <a href="#" class="select_all_arrow"><img class="select_all_arrow" src="/site_media/images/arrow-down.gif"></img></a>
+	  <a href="#" class="select_all_arrow"><img class="select_all_arrow" src="/simpz/site_media/images/arrow-down.gif"></img></a>
 	  <hr  class="horizontal_line "/>
-          <div id="twitlist"><img src="/site_media/images/ajax_loader.gif" /></div>
+          <div id="twitlist"><img src="/simpz/site_media/images/ajax_loader.gif" /></div>
         </div>
         
         <BR />
@@ -135,7 +135,7 @@ You have been Invited by {{refer_user.name}} &nbsp;&nbsp;<img src="{{refer_user.
 <div class="span-11 last">
 	      
   <div id="visual_img" style="width: 400px; height: 500px;">
-    <img class="center" style="width: 400px; height: 500px;" src="/site_media/images/events/{{event.id}}" />
+    <img class="center" style="width: 400px; height: 500px;" src="/simpz/site_media/images/events/{{event.id}}" />
   </div>
 
   <div id="visual_map" style="width: 400px; height: 500px;" > </div>						
@@ -160,25 +160,25 @@ $(document).ready(function() {
 	$("#invite_popup_close").bind('click', function() {
 		$('#invite_popup').hide();
                 $('#tweet_msg').html("");
-		$('#twitlist').html("<img width='30' height='30' src='/site_media/images/ajax_loader.gif' />");
+		$('#twitlist').html("<img width='30' height='30' src='/simpz/site_media/images/ajax_loader.gif' />");
 	 });
 
 
 	$("#not_going_button").click(function(){
-		$.get('/ajax/event_not_going/{{event.id}}', function(data) {
+		$.get('/simpz/ajax/event_not_going/{{event.id}}', function(data) {
 			location.reload();
 		    });
 	    });
 			
 	$("#going_button").click(function(){
-		$.get('/ajax/event_going/{{event.id}}', function(data) {
+		$.get('/simpz/ajax/event_going/{{event.id}}', function(data) {
 			location.reload();
 		    });
 	    });
 
        $("#tweet_invite_button").click(function(){
 		$.ajax({
-                    url: '/ajax/event_tweet_invite/{{event.id}}', 
+                    url: '/simpz/ajax/event_tweet_invite/{{event.id}}', 
                     dataType: "json",
                     data: {data: $("#tweet_text").val(), 
                     invite_url: '{{invite_url}}',
@@ -189,7 +189,7 @@ $(document).ready(function() {
 	        	     },
                     beforeSend: function() {
                         //$("#tweet_invite_button").attr("disabled","disabled");                               
-                        $("#tweet_msg").html("<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />Sending Tweet<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />");
+                        $("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Tweet<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
                     }
                    });
 	    });
@@ -220,7 +220,7 @@ $(document).ready(function() {
             });
            
             $.ajax({
-                    url: '/ajax/event_tweet_invite_dm/{{event.id}}', 
+                    url: '/simpz/ajax/event_tweet_invite_dm/{{event.id}}', 
                     dataType: "json",
                     data: {data: $("#tweet_text").val(), 
                     invite_url: '{{invite_url}}',
@@ -233,7 +233,7 @@ $(document).ready(function() {
 	        	     },
                     beforeSend: function() {
                         $("#invite_dm_button").attr("disabled","disabled");                      
-                        $("#tweet_msg").html("<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />Sending Direct Msg Tweets<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />");
+                        $("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Direct Msg Tweets<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
                     }
                    });
         });
@@ -287,14 +287,14 @@ function setup_select_all_button() {
        $(".friend_list_item").each(function(index) {
                 $(this).css("background-color", "#FF9933");    
                 $(this).find("input[name='invitee']").attr("checked", "yes");
-                $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_checked.png");
+                $(this).find("img.checkbox_invite").attr("src", "/simpz/site_media/images/checkbox_checked.png");
             });
     }, 
     function() {
         $(".friend_list_item").each(function(index) {
                 $(this).css("background-color", "#FBF5EF");    
                 $(this).find("input[name='invitee']").removeAttr("checked");
-                $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_unchecked.png");
+                $(this).find("img.checkbox_invite").attr("src", "/simpz/site_media/images/checkbox_unchecked.png");
         });
     });
 
@@ -302,7 +302,7 @@ function setup_select_all_button() {
 
 function display_friends_invite() {
             $.ajax({
-                    url: '/ajax/event_friend_not_attendees/{{event.id}}', 
+                    url: '/simpz/ajax/event_friend_not_attendees/{{event.id}}', 
                     dataType: "json",
                     success: function(data){
                                $('#twitlist').html(make_friend_list(data));
@@ -317,7 +317,7 @@ function display_friends_invite() {
                                          $(this).css("background-color", "#FF9933");
                                    });
                                    $(this).find("input[name='invitee']").attr("checked", "yes");
-                                   $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_checked.png");
+                                   $(this).find("img.checkbox_invite").attr("src", "/simpz/site_media/images/checkbox_checked.png");
                                }, function() {
                                    $(this).css("background-color", "#fd9");
                                    $(this).hover(function(){
@@ -328,13 +328,13 @@ function display_friends_invite() {
                                    });
 
                                    $(this).find("input[name='invitee']").removeAttr("checked");
-                                   $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_unchecked.png");
+                                   $(this).find("img.checkbox_invite").attr("src", "/simpz/site_media/images/checkbox_unchecked.png");
                                });
                                setup_select_all_button(); 
 	                       
 	        	     },
                     beforeSend: function() {
-                        $('#tweet_msg').html("<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />Loading Friend Data<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />");
+                        $('#tweet_msg').html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Loading Friend Data<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
                     }
                    });
  
