--- a/templates/header.html
+++ b/templates/header.html
@@ -2,9 +2,9 @@
 
 {% block login%}
 {% if user %}
-<div class="span-4 logout"><a href="/logout/">logout, {{user.username}} <img src="{{user.profile_pic}}" /></a></div>
+<div class="span-4 logout"><a href="/simpz/logout/">logout, {{user.username}} <img src="{{user.profile_pic}}" /></a></div>
 {% else %}
-<div class="span-4 logout"><a href="/login/"><img src="/site_media/images/twitter_button_5_lo.gif/" /></a><br/><br/></div>
+<div class="span-4 logout"><a href="/simpz/login/"><img src="/simpz/site_media/images/twitter_button_5_lo.gif/" /></a><br/><br/></div>
 {% endif %}
 {% endblock %}
 
