--- a/templates/list.html
+++ b/templates/list.html
@@ -9,7 +9,7 @@
     {% for event in events %}
     <hr />
         <li>
-	  <a href=/event_home/{{event.id}}>{{ event.name }}</a> <br />
+	  <a href=/simpz/event_home/{{event.id}}>{{ event.name }}</a> <br />
 	    Event Id: {{ event.id }} <br />
 	    Description: {{event.description}} <br />
 	    Start Time: {{event.event_date_time_start}} <br />
@@ -32,7 +32,7 @@ var create_note = function() {
   var slug = $("#slug").val()
   if (title != "" && slug != "") {
     var data = { title:title, slug:slug };
-    var args = { type:"POST", url:"/create/", data:data, complete:done };
+    var args = { type:"POST", url:"/simpz/create/", data:data, complete:done };
     $.ajax(args);
   }
   else {
