--- a/simpz/templates/list.html
+++ b/simpz/templates/list.html
@@ -11,6 +11,7 @@
     <hr />
         <li>
 	  <a href=/simpz/event_home/{{event.id}}>{{ event.name }}</a> <br />
+	  <a href=/simpz/event_details/{{event.id}}>details</a> <br />
 	    Event Id: {{ event.id }} <br />
 	    Description: {{event.description}} <br />
 	    Start Time: {{event.event_date_time_start}} <br />
