Fixing links to have an ending / .

--- a/simpz/templates/index_include.html
+++ b/simpz/templates/index_include.html
@@ -34,7 +34,7 @@
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				
-				<div id="featured"><a href="/simpz/create"><img src="/simpz/site_media/images/look/button.png"></a>
+				<div id="featured"><a href="/simpz/create/"><img src="/simpz/site_media/images/look/button.png"></a>
 				<div>
 			</div>
 		</div>
