--- a/simpz/templates/list.html
+++ b/simpz/templates/list.html
@@ -11,7 +11,6 @@
     <hr />
         <li>
 	  <a href=/simpz/event_home/{{event.id}}>{{ event.name }}</a> <br />
-	  <a href=/simpz/event_details/{{event.id}}>details</a> <br />
 	    Event Id: {{ event.id }} <br />
 	    Description: {{event.description}} <br />
 	    Start Time: {{event.event_date_time_start}} <br />
@@ -22,13 +21,14 @@
 	    Price: {{event.price}} <br />
  	    URL: {{event.url}} <br />
             Organizer: {{event.organizer_id}}
+	  <a href=/simpz/event_details/{{event.id}}>details</a> <br />
 	</li>
     {% endfor %}
     </ul>
     <hr />
 
-
 <script>
+alert("here there");
 var create_note = function() {
   var title = $("#title").val()
   var slug = $("#slug").val()
@@ -64,3 +64,4 @@ var done = function(res, status) {
 $("#create").click(create_note);
 </script>    
 {% endblock %}
+
