--- a/simpz/templates/event_base.html
+++ b/simpz/templates/event_base.html
@@ -27,18 +27,20 @@
 <body>
 	<div id="main">
 		<div id="header">
-			<div>
+		  <div>
 				<ul id="topnav">
 					<li><a href="get.html">Get Evently</a></li>
 					<li><a href="howitworks.html">How it works</a></li>
 					<li><a href="contact.html">Contact</a></li>
-				</ul>
-				
-				<div id="featured"><div>
-			</div>
+				</ul>	
+				<div id="featured"></div>
+		  </div>	  
 		</div>
 		<!-- END featured -->
 	</div>
+</div>
+
+
 </div>
 <div id="content">
 	
