Fixing up some stuff.

--- a/simpz/templates/details.html
+++ b/simpz/templates/details.html
@@ -3,7 +3,7 @@
 {% block title %}Event Details{% endblock %}
 
 {% block content %}
-<p>Event Details.</p>
+<h2>Event Details.</h2>
 {% if event %}
 <a href=/event_home/{{event.id}}>{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
