--- a/simpz/templates/index_include.html
+++ b/simpz/templates/index_include.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/simpz/site_media/jquery-1.4.2.min.js" ></script>
     <script type="text/javascript" src="/simpz/site_media/myjscript.js" ></script>
     <script type="text/javascript" src="/simpz/site_media/jquery.tools.min.js" ></script>
-
+    <script type="text/javascript" src="/simpz/site_media/jquery.validate.js" ></script>
 
 	{% block  js_css_include %}
 	{% endblock %}
