Adding some more.

--- a/simpz/templates/details.html
+++ b/simpz/templates/details.html
@@ -18,6 +18,7 @@ Organizer: {{event.organizer_id}}
 <hr/>
 <table id="details_table">
 <tr>
+  <th>Invite</th>
   <th>From</th>
   <th>To</th>
   <th>Message</th>
@@ -26,6 +27,7 @@ Organizer: {{event.organizer_id}}
 {% for invite in invites %}
 
 <tr>
+<td><a href="/simpz/invite/{{invite.id}}/">{{invite.id}}</a></td>
 <td><a href="/simpz/user_details/{{invite.from_user_id}}/">{{invite.from_user_id}}</a></td>
 <td><a href="/simpz/user_details/{{invite.to_user_id}}/">{{invite.to_user_id}}</a></td>
 <td>{{invite.message}}</td>
