--- a/simpz/templates/event_home.html
+++ b/simpz/templates/event_home.html
@@ -83,7 +83,7 @@ You have been Invited by {{refer_user.name}} &nbsp;&nbsp;<img src="{{refer_user.
           <div id="tweet_msg"></div>
 	  <a href="#" class="select_all_arrow"><img class="select_all_arrow" src="/simpz/site_media/images/arrow-down.gif"></img></a>
 	  <hr  class="horizontal_line "/>
-          <div id="twitlist"><img src="/simpz/site_media/images/ajax-loader.gif" /></div>
+          <div id="twitlist"></div>
         </div>
         
         <BR />
@@ -160,7 +160,7 @@ $(document).ready(function() {
 	$("#invite_popup_close").bind('click', function() {
 		$('#invite_popup').hide();
                 $('#tweet_msg').html("");
-		$('#twitlist').html("<img width='30' height='30' src='/simpz/site_media/images/ajax_loader.gif' />");
+                ajax_loader_image();
 	 });
 
 
@@ -189,7 +189,8 @@ $(document).ready(function() {
 	        	     },
                     beforeSend: function() {
                         //$("#tweet_invite_button").attr("disabled","disabled");                               
-                        $("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Tweet<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
+                        $("#tweet_msg").html("Sending Tweet");
+                        ajax_loader_image();
                     }
                    });
 	    });
@@ -233,7 +234,8 @@ $(document).ready(function() {
 	        	     },
                     beforeSend: function() {
                         $("#invite_dm_button").attr("disabled","disabled");                      
-                        $("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Direct Msg Tweets<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
+                        $("#tweet_msg").html("Sending Direct Msg Tweets");
+                        ajax_loader_image();
                     }
                    });
         });
@@ -300,12 +302,16 @@ function setup_select_all_button() {
 
 }
 
+function ajax_loader_image() {
+    $('#twitlist').html("<img style='margin-left:275px; margin-top:40px;' width='130' height='130' src='/simpz/site_media/images/ajax-loader.gif' />");
+}
+
 function display_friends_invite() {
             $.ajax({
                     url: '/simpz/ajax/event_friend_not_attendees/{{event.id}}', 
                     dataType: "json",
                     success: function(data){
-                               $('#twitlist').html(make_friend_list(data));
+                               var friend_list_html = make_friend_list(data); 
                                $('#tweet_msg').html("Invite Your Friends");
                                                              
                                $(".friend_list_item").toggle(function() {
@@ -331,10 +337,12 @@ function display_friends_invite() {
                                    $(this).find("img.checkbox_invite").attr("src", "/simpz/site_media/images/checkbox_unchecked.png");
                                });
                                setup_select_all_button(); 
+                               $('#twitlist').html(friend_list_html);
 	                       
 	        	     },
                     beforeSend: function() {
-                        $('#tweet_msg').html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Loading Friend Data<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
+                        $('#tweet_msg').html("Loading Friend Data");
+                        ajax_loader_image();
                     }
                    });
  
