--- a/simpz/templates/thanks.html
+++ b/simpz/templates/thanks.html
@@ -14,7 +14,10 @@ End Time: {{event.event_date_time_end}} <br />
 Capacity: {{event.capacity}} <br />
 Venue: {{event.venue }} <br />
 Venue Address: {{event.venue_address}} <br />
-Organizer: {{event.organizer_id}}
+Organizer: {{event.organizer_id}} <br />
+
+URL: <a href="{{invite_url}}">{{invite_url}}</a>
+
 {% endif %}
 
 {% endblock %}
