--- a/simpz/templates/index_include.html
+++ b/simpz/templates/index_include.html
@@ -62,6 +62,22 @@
  <!-- Footer content -->
       {% include "footer.html" %}							
 
+<fb:login-button></fb:login-button>
+<div id="fb-root"></div>
+<script src="http://connect.facebook.net/en_US/all.js"></script>
+<script>
+  FB.init({appId: '130071620346580', status: true, cookie: true, xfbml: true});
+  FB.Event.subscribe('auth.sessionChange', function(response) {
+    if (response.session) {
+      // A user has logged in, and ea new cookie has been saved
+  alert("user is logged in");
+    } else {
+      // The user has logged out, and the cookie has been cleared
+  alert("user is logged out");
+    }
+  });
+</script>
 </body>
+
 </html>
     
