--- a/simpz/templates/user.html
+++ b/simpz/templates/user.html
@@ -13,6 +13,118 @@ Name: {{user_info.name }} <br />
 Twitter ID: {{user_info.twitter_id}} <br />
 URL: {{user_info.url}}
 
+
+
+<hr/>
+<h3>Made Invites</h3>
+<table id="details_table">
+<tr>
+  <th>Invites</th>
+  <th>Parent Invite</th>
+  <th>From Person</th>
+  <th>To</th>
+  <th>Message</th>
+  <th>CreatedAt</th>
+</tr>
+{% for invite in made_invites %}
+
+<tr>
+<td><a href="/simpz/invite/{{invite.id}}/">{{invite.id}}</a></td>
+<td><a href="/simpz/invite/{{invite.id}}/">{{invite.from_invite.id}}</a></td>
+<td><a href="/simpz/user_details/{{invite.from_user_id}}/">{{invite.from_user_id}}</a>&nbsp;{{invite.from_user.username}}</td>
+<td><a href="/simpz/user_details/{{invite.to_user_id}}/">{{invite.to_user_id}}</a></td>
+<td>{{invite.message}}</td>
+<td>{{invite.created_at}}</td>
+</tr>
+{% endfor %}
+<table>
+
+
+<hr/>
+<h3>Received Invites</h3>
+<table id="details_table">
+<tr>
+  <th>Invites</th>
+  <th>Parent Invite</th>
+  <th>From Person</th>
+  <th>To</th>
+  <th>Message</th>
+  <th>CreatedAt</th>
+</tr>
+{% for invite in received_invites %}
+
+<tr>
+<td><a href="/simpz/invite/{{invite.id}}/">{{invite.id}}</a></td>
+<td><a href="/simpz/invite/{{invite.id}}/">{{invite.from_invite.id}}</a></td>
+<td><a href="/simpz/user_details/{{invite.from_user_id}}/">{{invite.from_user_id}}</a>&nbsp;{{invite.from_user.username}}</td>
+<td><a href="/simpz/user_details/{{invite.to_user_id}}/">{{invite.to_user_id}}</a></td>
+<td>{{invite.message}}</td>
+<td>{{invite.created_at}}</td>
+</tr>
+{% endfor %}
+<table>
+
+
+
+<hr/>
+<h3>Events Going</h3>
+<table id="details_table">
+<tr>
+  <th>Event</th>
+  <th>Title</th>
+  <th>Event Page</th>
+</tr>
+{% for event in events_going %}
+
+<tr>
+<td><a href="/simpz/event_details/{{event.id}}/">{{event.id}}</a></td>
+<td>{{event.title}}</td>
+<td><a href="/simpz/event_home/{{event.id}}/">{{event.id}}</a>&nbsp</td>
+</tr>
+{% endfor %}
+<table>
+
+
+<hr/>
+<h3>Events Organized</h3>
+<table id="details_table">
+<tr>
+  <th>Event</th>
+  <th>Title</th>
+  <th>Event Page</th>
+</tr>
+{% for event in events_organized %}
+
+<tr>
+<td><a href="/simpz/event_details/{{event.id}}/">{{event.id}}</a></td>
+<td>{{event.title}}</td>
+<td><a href="/simpz/event_home/{{event.id}}/">{{event.id}}</a>&nbsp</td>
+</tr>
+{% endfor %}
+<table>
+
+
+
+<hr/>
+<h3>Events Maybe</h3>
+<table id="details_table">
+<tr>
+  <th>Event</th>
+  <th>Title</th>
+  <th>Event Page</th>
+</tr>
+{% for event in events_maybe %}
+
+<tr>
+<td><a href="/simpz/event_details/{{event.id}}/">{{event.id}}</a></td>
+<td>{{event.title}}</td>
+<td><a href="/simpz/event_home/{{event.id}}/">{{event.id}}</a>&nbsp</td>
+</tr>
+{% endfor %}
+<table>
+
+
+
 <br /><br />
 <input id="showfriends" type="submit" value="ShowFriends" />
 <div id="friends">
